--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "typescript": "^5.0.3",
     "vite": "^4.1.4",
     "vite-plugin-electron": "^0.11.1"
+  },
+  "dependencies": {
+    "axios": "^1.4.0",
+    "steamworks.js": "^0.2.0"
   }
 }
