--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "vite-plugin-electron": "^0.11.1"
   },
   "dependencies": {
-    "axios": "^1.4.0",
-    "steamworks.js": "^0.2.0"
+    "axios": "^1.4.0"
   }
 }
