--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
   "devDependencies": {
     "electron": "^24.1.3",
     "electron-builder": "^24.4.0",
+    "steamworks.js": "^0.2.0",
     "typescript": "^5.0.3",
     "vite": "^4.1.4",
     "vite-plugin-electron": "^0.11.1"
   },
   "dependencies": {
-    "axios": "^1.4.0"
+    "axios": "^1.4.0",
+    "node-machine-id": "^1.1.12"
   }
 }
