--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,15 @@
       ],
       "url": "https://json.schemastore.org/electron-builder"
     }
-  ]
+  ],
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/Thumbs.db": true,
+    ".github": true
+  },
+  "explorerExclude.backup": {}
 }
